--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -6,15 +6,15 @@
 6. Add health routes end point - Done
 7. Refactor all routes-services-controllers as per the sample auth.- Done
 
-8. Complete first 5 APIs fully and test from db and postman, swagger.
+8. Complete first 5 APIs fully and test from db and postman - Done
 
 9. Carefully re-define all group related api definitions and dtos
-10. carefully re-define all message retrieval related api definitions and dtos
+10. carefully re-define all message retrieval related api definitions and dtos - Done
 
-11. Write service classes which will call SPs
-12. Write controller classes
-13. Complete the integration in the route file
-14. Test one endpoint and check the log
+11. Write service classes which will call SPs- Done
+12. Write controller classes- Done
+13. Complete the integration in the route file- Done
+14. Test one endpoint and check the log- Done
 
 15. Complete all the remaining endpoints
 16. Test all endpoints
@@ -22,6 +22,7 @@
 17. Analyze real-time web-socket based endpoints
 18. Implement real-time web-socket based endpoints
 19. Test real-time web-socket based endpoints
+20. Create unit tests
 
 
 ------------------
