Refactor group management functionality and remove unused entities
- Updated GroupController to improve error handling and validation for group operations.
- Removed unused entity files: Banishment, GroupMember, JoinRequest, RefGroupType, and RefJoinRequestStatus.
- Enhanced GroupService with better error handling and validation for group ownership.
- Added Jest test skeletons for AuthController, GroupController, and MessageController.
- Implemented tests for AuthService, GroupService, and utility functions.
- Configured Jest for testing with TypeScript support.

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -19,13 +19,16 @@
 15. Complete all the remaining endpoints - Done
 16. Test all endpoints - Done
 17. Return the actual error message, but always its returning the same error. fix the error middleware - Done
+18. Create unit tests - Done
+19. Swagger - Done
 
-18. Analyze real-time web-socket based endpoints
-19. Implement real-time web-socket based endpoints
-20. Test real-time web-socket based endpoints
-21. Create unit tests
+20. Analyze real-time web-socket based endpoints
+21. Implement real-time web-socket based endpoints
+22. Test real-time web-socket based endpoints
+
 
 
 ------------------
 npm run build
 npm run start
+npx jest --verbose
